# awesomeCAM

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: agent.js  awesomecam_player
app/src/main/java/com/namnh/awesomecam/: InjectorActivity.kt  LogsActivity.kt  Mp4FeedController.kt  TelemetryStore.kt  VideoBridge.kt
app/src/main/jni/: CMakeLists.txt  awesomecam_player.cpp  elf_parser.cpp  elf_parser.h  hook.cpp  injector.cpp  injector.h  injector_main.cpp  libyuv_runtime.cpp  libyuv_runtime.h  proc_maps.cpp  proc_maps.h  ptrace_utils.cpp  ptrace_utils.h  ready_frame_cache.cpp  ready_frame_cache.h  remote_call.cpp  remote_call.h  streamclient.cpp  video2camera_ipc.h  video2camera_ndk.cpp  video2camera_ndk.h  video2camera_player.cpp  video2camera_service.cpp  video2camera_service.h
app/src/main/res/drawable/: bg_m2_divider.xml  bg_m2_hero.xml  bg_m2_page.xml  bg_m2_source_panel.xml  bg_m2_status_pill.xml  bg_miuix_badge.xml  bg_miuix_icon_button.xml  bg_miuix_inline_panel.xml  bg_miuix_log_panel.xml  bg_miuix_outline_button.xml  bg_miuix_primary_button.xml  bg_miuix_secondary_button.xml
app/src/main/res/layout/: activity_injector.xml  activity_logs.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
sepolicy-patcher/: README.md  action.sh  module.prop  post-fs-data.sh  sepolicy.rule
